# demo-script

./: .gitignore  Cargo.toml  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug_issue.md  bug_issue.yml  chore_issue.md  chore_issue.yml  feature_issue.md  feature_issue.yml  release_issue.md  release_issue.yml
.github/workflows/: approve-issue.yml  approve.yml  assignees.yml  check-issue.yml  close-issue.yml  create-issue.yml  create_issue_from_template.yml  main.yml  move-issue.yml  move.yml  move_issue_in_project.txt  move_issue_in_project.yml  must-assign-rev-chaos.yml  review.yml  unassigned.yml  update_project.txt
c/: demo.c  demo.syms  dynamic_load.c
src/: lib.rs
src/tests/: demo.rs  dynamic_load.rs  mod.rs
