[package]
name = "ckb-system-scripts"
version = "0.5.1"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"
license = "MIT"
description = "STO Scripts"
repository = "https://github.com/nervosnetwork/cto-scripts"
include = ["src/**/*", "Cargo.toml", "specs/cells/*"]

[dependencies]

[dev-dependencies]
ckb-types = { git = "https://github.com/nervosnetwork/ckb.git", rev = "a18b0e" }
ckb-script = { git = "https://github.com/nervosnetwork/ckb.git", rev = "a18b0e" }
ckb-crypto = { git = "https://github.com/nervosnetwork/ckb.git", rev = "a18b0e" }
ckb-dao-utils = { git = "https://github.com/nervosnetwork/ckb.git", rev = "a18b0e" }
ckb-hash = { git = "https://github.com/nervosnetwork/ckb.git", rev = "a18b0e" }
ckb-error = { git = "https://github.com/nervosnetwork/ckb.git", rev = "a18b0e" }
ckb-traits = { git = "https://github.com/nervosnetwork/ckb.git", rev = "a18b0e" }
rand = "0.6.5"
lazy_static = "1.3.0"
